= [UNRELEASED]
* Fix DateTimeSelect extension support (AquisTech)
* Relaxed Timeliness dependency version which allows for >= 0.4.0 with
  threadsafety fix for use_us_formats and use_euro_formats for hot switching
	in a request.
* Add initializer to ensure Timeliness v0.4+ ambiguous date config is set
  correctly when using `use_euro_formats` or `remove_use_formats'.

Breaking Changes
* Update Multiparameter extension to use ActiveRecord type classes with multiparameter handling
  which stores a hash of multiparamter values as the value before type cast, no longer a mushed datetime string
* Removed all custom plugin attribute methods and method overrides in favour using ActiveModel type system

= 4.1.0 [2019-06-11]
* Relaxed Timeliness dependency version to >= 0.3.10 and < 1, which allows
  version 0.4 with threadsafety fix for use_us_formats and use_euro_formats
  hot switching in a request.

= 4.0.2 [2016-01-07]
* Fix undefine_generated_methods ivar guard setting to false

= 4.0.1 [2016-01-06]
* Fix undefine_generated_methods thread locking bug
* Created an ActiveModel ORM, for manual require if using without any full blown ORM

= 4.0.0 [2015-12-29]
* Extracted mongoid support into https://github.com/adzap/validates_timeliness-mongoid which is broken (not supported anymore).
* Fixed Rails 4.0, 4.1 and 4.2 compatability issues
* Upgrade specs to RSpec 3
* Added travis config
* Huge thanks to @johncarney for keeping it alive with his fork (https://github.com/johncarney/validates_timeliness)

= 3.0.15 [2015-12-29]
* Fixes mongoid 3 support and removes mongoid 2 support(johnnyshields)
* Some documentation/comments tidying
* Some general tidying up

= 3.0.14 [2012-08-23]
* Fix for using validates :timeliness => {} form to correctly add attributes to timeliness validated attributes.

= 3.0.13 [2012-08-21]
* Fix ActiveRecord issues with using plugin parser by using old way of caching values.
* Allow any ActiveRecord non-column attribute to be validated
