@@ -1,5 +1,6 @@
 appraise "rails_5_0" do
   gem "rails", "~> 5.0.0"
+  gem 'sqlite3', '~> 1.3.6'
 end
 
 appraise "rails_5_1" do
@@ -8,4 +9,16 @@ end
 
 appraise "rails_5_2" do
   gem "rails", "~> 5.2.0"
+end
+
+appraise "rails_6_0" do
+  gem "rails", "~> 6.0.0"
+end
+
+appraise "rails_6_1" do
+  gem "rails", "~> 6.1.0"
+end
+
+appraise "rails_edge" do
+  gem "rails", github: "rails/rails"
 end
