@@ -1,4 +1,4 @@
-Copyright (c) 2008-2010 Adam Meehan
+Copyright (c) 2008-2021 Adam Meehan
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
