@@ -5,10 +5,10 @@ source "http://rubygems.org"
 gem "rails", "~> 5.1.0"
 gem "rspec"
 gem "rspec-rails", "~> 3.7"
+gem "sqlite3"
 gem "timecop"
 gem "byebug"
 gem "appraisal"
-gem "sqlite3", "~> 1.3.6"
 gem "nokogiri", "~> 1.8"
 
 gemspec path: "../"
