@@ -2,10 +2,10 @@
 
 source "http://rubygems.org"
 
-gem "rails", "~> 5.0.0"
+gem "rails", "~> 6.1.0"
 gem "rspec"
 gem "rspec-rails", "~> 3.7"
-gem "sqlite3", "~> 1.3.6"
+gem "sqlite3"
 gem "timecop"
 gem "byebug"
 gem "appraisal"
